# shadPS4

./: AGENTS.md  CMakeLists.txt  FORK.md  README.md  REUSE.toml
.github/: ci-trigger.txt
documents/: emulator-test-lab.md
scripts/: game_test_runner.py
src/: emulator.cpp  main.cpp  sdl_window.cpp
src/common/: first_use_tracker.h  intrusive_ref.h  shared_slot_registry.h  slot_vector.h  thread.cpp  thread.h
src/common/logging/: log.h
src/core/: address_space.cpp  backing_write_cursor.h  debug_state.h  emulator_settings.cpp  emulator_settings.h  memory.cpp  platform.h  test_lab_probe.cpp  test_lab_probe.h  tls.h  user_manager.cpp  user_migration.cpp  user_migration.h  windows_sparse_backing.h
src/core/ipc/: ipc.cpp
src/core/libraries/gnmdriver/: gnmdriver.cpp  graphics_event.h  submission_gate.h
src/core/libraries/kernel/: equeue.cpp  equeue.h  equeue_wait_policy.h  file_read_staging.h  file_system.cpp  select_timing.cpp  select_timing.h
src/core/libraries/kernel/threads/: condvar.cpp  condvar_wait_state.h  event_flag.cpp  event_flag_policy.h  guest_thread_priority.h  pthread.cpp  pthread.h  sched_policy.h  semaphore.cpp  semaphore_policy.h  sleepq.h
src/core/libraries/libc_internal/: libc_internal.cpp  libc_internal_time.cpp  libc_internal_time.h
src/core/libraries/ngs2/: ngs2.cpp  ngs2_impl.cpp  ngs2_impl.h
src/core/libraries/playgo/: playgo.cpp  playgo.h
src/core/libraries/save_data/dialog/: gamepad_input_capture.h  savedatadialog_navigation.h  savedatadialog_ui.cpp  savedatadialog_ui.h
src/core/libraries/system_gesture/: system_gesture.cpp
src/core/libraries/videodec/: video_utils.cpp  videodec.cpp  videodec2.cpp  videodec2_decode_validation.h  videodec2_impl.cpp  videodec2_impl.h  videodec2_picture_info_store.h  videodec_decode_validation.h  videodec_frame_handle.h  videodec_impl.cpp  videodec_packet_handle.h
src/core/libraries/videoout/: driver.cpp  driver.h  flip_queue_capacity.h  vblank_tick.h  video_out.cpp
src/imgui/: notification_state.h  notifications_layer.cpp  notifications_layer.h
src/imgui/big_picture/: settings_dialog_imgui.cpp  settings_dialog_imgui.h
src/imgui/renderer/: imgui_impl_sdl3.cpp  imgui_impl_sdl3.h  png_decode.cpp  png_decode.h  texture_job_queue.h  texture_manager.cpp
src/input/: controller.cpp  controller.h  controller_axis.cpp  controller_axis.h  controller_button.cpp  controller_button.h  controller_connection.h  controller_touch.h  controller_trace.cpp  controller_trace.h  input_handler.h  virtual_gamepad.h
src/shader_recompiler/: profile.h  read_const_access_policy.h
src/shader_recompiler/backend/spirv/: emit_spirv.cpp  emit_spirv_context_get_set.cpp  emit_spirv_image.cpp  emit_spirv_quad_rect.cpp  emit_spirv_quad_rect.h  emit_spirv_warp.cpp  image_offset_policy.h  spirv_emit_context.cpp
src/shader_recompiler/ir/passes/: flatten_extended_userdata_pass.cpp  shader_info_collection_pass.cpp  shared_memory_barrier_pass.cpp
src/video_core/: renderdoc.cpp  renderdoc.h  renderdoc_path.cpp  renderdoc_path.h  screenshot_request_queue.h  screenshot_writer_queue.h
src/video_core/amdgpu/: eop_completion.h  eop_flip_completion.h  eop_flip_submission.h  liverpool.cpp  liverpool.h  pm4_cmds.h  pm4_lod_stats.h  pm4_memory_wait.h  pm4_predication.h  resource.h  submission_boundary.h  submission_boundary_queue.h
src/video_core/buffer_cache/: buffer.h  buffer_cache.cpp  buffer_cache.h  fault_buffer_layout.h  fault_manager.cpp  fault_range.h  stream_buffer_copy.h  vertex_buffer_range.h  vertex_input_binding.h
src/video_core/host_shaders/: tiling.comp
src/video_core/renderer_vulkan/: buffer_barrier_policy.h  descriptor_type.h  device_feature_policy.h  liverpool_to_vk.cpp  presented_frame_timing_trace.h  presenter_sync.h  vk_compute_pipeline.cpp  vk_compute_pipeline.h  vk_diagnostic_checkpoint.h  vk_graphics_pipeline.cpp  vk_instance.cpp  vk_instance.h  vk_pipeline_bind_history.h  vk_pipeline_cache.cpp  vk_platform.cpp  vk_platform.h  vk_presenter.cpp  vk_presenter.h  vk_rasterizer.cpp  vk_rasterizer.h  vk_scheduler.cpp  vk_scheduler.h  vk_submit_info.h
src/video_core/texture_cache/: image_copy_policy.h  image_download_policy.h  image_info.cpp  image_view.h  sampler.cpp  texture_cache.cpp  texture_cache.h  tile.h  tile_manager.cpp  types.h
tests/: CMakeLists.txt  test_aux_tess_shader.cpp  test_backing_write_cursor.cpp  test_buffer_barrier_policy.cpp  test_buffer_resource.cpp  test_condvar_wait_state.cpp  test_controller_axis.cpp  test_controller_button.cpp  test_controller_connection.cpp  test_controller_touch.cpp  test_controller_trace.cpp  test_descriptor_type.cpp  test_device_features.cpp  test_equeue_event.cpp  test_event_flag_policy.cpp  test_event_write_eop.cpp  test_fault_buffer_count.cpp  test_fault_range.cpp  test_file_read_staging.cpp  test_first_use_tracker.cpp  test_flip_queue_capacity.cpp  test_gnm_submission_gate.cpp  test_gpu_compatibility_settings.cpp  test_guest_thread_priority.cpp  test_image_copy_policy.cpp  test_image_download_policy.cpp  test_image_offset_policy.cpp  test_intrusive_ref.cpp  test_irq_controller.cpp  test_kernel_select_timing.cpp  test_kernel_semaphore_policy.cpp  test_libc_time.cpp  test_log_once.cpp  test_ngs2.cpp  test_notification_state.cpp  test_pipeline_bind_history.cpp  test_playgo.cpp  test_pm4_cond_exec.cpp  test_pm4_lod_stats.cpp  test_pm4_memory_wait.cpp  (+27 more)
tests/game_harness/: README.md  fake_emulator.py  games.example.json  test_game_test_runner.py
tests/gcn/: test_gcn_instructions.cpp  test_shared_memory_barriers.cpp  translator.cpp  translator.hpp
